<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="0dp"
    android:layout_marginHorizontal="0dp"
    android:background="@color/splashback"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/sign_up_icon"
        style="@style/LoginSignUpIconStyle"
        android:layout_width="108dp"
        android:layout_height="105dp"
        android:layout_marginVertical="32dp"
        android:src="@drawable/sign_up_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_icon"
        android:id="@+id/hello_text"
        android:orientation="vertical">

        <TextView
            style="@style/SignUpTextStyle"
            android:text="@string/hello" />

        <TextView
            style="@style/SignUpTextStyle"
            android:text="@string/lgs"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_layout"
        android:layout_below="@id/hello_text"
        android:layout_marginVertical="32dp"
        android:orientation="vertical">

        <EditText
            style="@style/SignUpEditTextStyle"
            android:id="@+id/email_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email"


            />
        <EditText
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/SignUpEditTextStyle"
            />

        <EditText
            style="@style/SignUpEditTextStyle"
            android:id="@+id/confirm_password_edit_text"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            />
        <CheckBox
            android:id="@+id/show_password_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showpassword"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/afregular"
            android:textColor="@color/splashFontColor"
            android:textSize="20dp"
            android:textColorHighlight="@color/splashFontColor"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_account_btn"
            style="@style/ButtonStyle2"
            android:layout_width="260dp"
            android:text="@string/create_account" />

        <ProgressBar
            style="@style/ProgressBarStyle"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            style="@style/WrapContentStyle"
            android:textColor="@color/palepink"
            android:text="@string/already"/>

        <TextView
            android:id="@+id/login_text_view_btn"
            style="@style/WrapContentStyle"
            android:textColor="@color/palepink"
            android:text="@string/sign_in"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>