<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fontFamily="@font/extrabold"
    android:background="@color/splashback"
    tools:context=".SplashActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="20dp"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="0dp"
            android:adjustViewBounds="true"
            android:src="@drawable/splash"
            android:scaleType="centerCrop"
            android:contentDescription="@string/splash_image_description"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="20dp"
        >

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/afsemibold"
        android:text="@string/compose"
        android:textColor="@color/splashFontColor"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afregular"
        android:text="@string/splash_screen_note"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/splashFontColor"
        android:lineSpacingExtra="4dp"
        android:padding="16dp"
        android:elevation="4dp"
        android:layout_margin="16dp"
        android:gravity="center"/>
    <ProgressBar
        style="@style/ProgressBarStyle"
        android:indeterminateTint="@color/splashFontColor"
        />

</LinearLayout>